# brink

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  package.json  pnpm-lock.yaml
benchmarks/tools/gen-input/: Cargo.toml
benchmarks/tools/gen-input/src/: main.rs
crates/brink-cli/: Cargo.toml
crates/brink-cli/src/: batch.rs  main.rs
crates/brink-cli/src/tui/: app.rs  event.rs  mod.rs  typewriter.rs  ui.rs
crates/brink-compiler/: Cargo.toml
crates/brink-compiler/src/: driver.rs  lib.rs
crates/brink-compiler/src/bytecode/: container.rs  content.rs  expr.rs  mod.rs
crates/brink-compiler/src/json/: emit.rs  mod.rs
crates/brink-compiler/tests/: debug_dump.rs  driver.rs  fixture_i002.rs  golden_i078.rs  json_corpus.rs  json_episodes.rs
crates/brink-lsp/: Cargo.toml
crates/brink-lsp/src/: backend.rs  convert.rs  main.rs  semantic_tokens.rs
crates/brink-lsp/tests/: integration.rs
crates/brink-runtime/: Cargo.toml
crates/brink-runtime/benches/: runtime.rs
crates/brink-runtime/src/: error.rs  lib.rs  linker.rs  list_ops.rs  locale.rs  output.rs  program.rs  rng.rs  state.rs  story.rs  transcript.rs  value_ops.rs  vm.rs
crates/brink-runtime/tests/: corpus.rs  locale.rs  run_story.rs
crates/brink-web/: Cargo.toml
crates/brink-web/src/: lib.rs
crates/brink-web/www/: editor.js  highlight.js  index.html  main.js  player.js
crates/internal/brink-analyzer/: Cargo.toml
crates/internal/brink-analyzer/src/: lib.rs  manifest.rs  resolve.rs  validate.rs
crates/internal/brink-analyzer/tests/: proptest_resolve.proptest-regressions  proptest_resolve.rs
crates/internal/brink-codegen-inkb/: Cargo.toml
crates/internal/brink-codegen-inkb/src/: container.rs  content.rs  expr.rs  lib.rs
crates/internal/brink-codegen-json/: Cargo.toml
crates/internal/brink-codegen-json/src/: emit.rs  lib.rs
crates/internal/brink-converter/: Cargo.toml
crates/internal/brink-converter/src/: canonicalize.rs  codegen.rs  error.rs  index.rs  lib.rs  path.rs  tests.rs
crates/internal/brink-db/: Cargo.toml
crates/internal/brink-db/src/: db.rs  file_state.rs  include_graph.rs  knot_cache.rs  lib.rs
crates/internal/brink-driver/: Cargo.toml
crates/internal/brink-driver/src/: diagnostics.rs  discover.rs  lib.rs
crates/internal/brink-fmt/: Cargo.toml
crates/internal/brink-fmt/src/: lib.rs
crates/internal/brink-format/: Cargo.toml
crates/internal/brink-format/fuzz/: Cargo.toml
crates/internal/brink-format/fuzz/fuzz_targets/: inkt_write_read_roundtrip.rs  read_index_no_panic.rs  read_inkt_no_panic.rs  read_no_panic.rs  section_reads_no_panic.rs  write_read_roundtrip.rs
crates/internal/brink-format/src/: codec.rs  counting.rs  definition.rs  id.rs  inkb.rs  lib.rs  line.rs  opcode.rs  story.rs  value.rs  write_inkt.rs
crates/internal/brink-format/src/inkb/: mod.rs  read.rs  write.rs
crates/internal/brink-format/src/inkl/: mod.rs  read.rs  write.rs
crates/internal/brink-format/src/inkt/: inkt.pest  mod.rs  read.rs  write.rs
crates/internal/brink-format/tests/: inkb.rs  inkl.rs  proptest_inkb.proptest-regressions  proptest_inkb.rs  proptest_inkt.proptest-regressions  proptest_inkt.rs  write_inkt.rs
crates/internal/brink-format/tests/snapshots/: inkb__snapshot_i001_inkb_bytes.snap  write_inkt__snapshot_i001_minimal_story.snap
crates/internal/brink-hir/: Cargo.toml
crates/internal/brink-hir/src/: lib.rs  lower.rs  types.rs
crates/internal/brink-hir/src/lower/: tests.rs
crates/internal/brink-ide/: Cargo.toml
crates/internal/brink-ide/src/: code_actions.rs  completion.rs  document.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  lib.rs  line_context.rs  line_convert.rs  line_index.rs  navigation.rs  rename.rs  semantic_tokens.rs  session.rs  signature.rs  structural_move.rs  text.rs
crates/internal/brink-intl/: Cargo.toml
crates/internal/brink-intl/examples/: generate_xliff.rs
crates/internal/brink-intl/src/: align.rs  compile.rs  error.rs  export.rs  json_model.rs  lib.rs  plural.rs  regenerate.rs  xliff_convert.rs  xliff_ops.rs
crates/internal/brink-intl/tests/: compile_locale.rs  export_lines.rs  json_roundtrip.rs  regenerate.rs  regenerate_snapshots.rs  xliff_roundtrip.rs
crates/internal/brink-intl/tests/snapshots/: export_lines__snapshot_i001_minimal_story.snap  regenerate_snapshots__snapshot_all_lines_changed.snap  regenerate_snapshots__snapshot_duplicate_hashes.snap  regenerate_snapshots__snapshot_empty_scope_survives.snap  regenerate_snapshots__snapshot_insertion_and_deletion_net_zero.snap  xliff_roundtrip__xliff_output_snapshot.snap
crates/internal/brink-ir/: Cargo.toml
crates/internal/brink-ir/src/: lib.rs  suppressions.rs
crates/internal/brink-ir/src/hir/: lower.rs  mod.rs  normalize.rs  stamp.rs  types.rs
crates/internal/brink-ir/src/lir/: mod.rs  types.rs
crates/internal/brink-ir/src/symbols/: index.rs  manifest.rs  mod.rs
crates/internal/brink-ir/tests/: lir_lowering.rs
crates/internal/brink-json/: Cargo.toml
crates/internal/brink-json/src/: choice_point.rs  container.rs  control_command.rs  divert.rs  element.rs  lib.rs  native_function.rs  tests.rs
crates/internal/brink-syntax/: Cargo.toml
crates/internal/brink-syntax/fuzz/: Cargo.toml
crates/internal/brink-syntax/src/: lib.rs  syntax_kind.rs
crates/internal/brink-syntax/tests/: corpus_roundtrip.rs  fuzz_repro.rs  proptest_syntax.proptest-regressions  proptest_syntax.rs
crates/internal/brink-test-harness/: Cargo.toml
crates/internal/brink-test-harness/src/: corpus.rs  diff.rs  episode.rs  explorer.rs  lib.rs  oracle.rs  runner.rs  snapshot_fmt.rs
crates/internal/brink-test-harness/tests/: brink_native_episodes.rs  converter_episodes.rs  corpus_report.rs  dump_episode.rs  episode_regression.rs  newline_diagnostic.rs  oracle_comparison.rs  oracle_snapshots.rs
crates/internal/xliff2/: .gitignore  Cargo.toml
crates/internal/xliff2/src/: error.rs  lib.rs  model.rs  read.rs  validate.rs  write.rs
crates/internal/xliff2/tests/: oasis_conformance.rs  round_trip.rs
(+9545 files in other folders)
