[workspace]
members = ["crates/brink-*", "crates/brink", "crates/internal/*"]
exclude = ["crates/internal/brink-syntax/fuzz", "crates/internal/brink-format/fuzz"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/syynth/brink"
readme = "README.md"
keywords = ["ink", "narrative", "compiler", "interactive-fiction"]
categories = ["compilers", "game-development"]

[workspace.lints.rust]
unsafe_code = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.clippy]
# Pedantic baseline
pedantic = { level = "warn", priority = -1 }

# Pedantic allows (only what's genuinely noisy/premature)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Cargo group
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

# Restriction lints — cherry-picked for real bug prevention
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"
wildcard_dependencies = "deny"
exit = "deny"
implicit_clone = "deny"
clone_on_ref_ptr = "deny"
rest_pat_in_fully_bound_structs = "warn"
verbose_file_reads = "warn"
allow_attributes = "warn"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rowan = "0.16.1"
bitflags = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
insta = "1.46.3"
pest = "2"
pest_derive = "2"
proptest = "1"
