[package]
name = "brink-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for compiling and running ink stories"

[dependencies]
brink-format = { path = "../internal/brink-format" }
brink-json = { path = "../internal/brink-json" }
brink-converter = { path = "../internal/brink-converter" }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
