[package]
name = "brink-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for compiling and running ink stories"

[dependencies]
brink-compiler = { path = "../brink-compiler" }
brink-format = { path = "../internal/brink-format", features = ["inkt"] }
brink-json = { path = "../internal/brink-json" }
brink-converter = { path = "../internal/brink-converter" }
brink-intl = { path = "../internal/brink-intl" }
brink-runtime = { path = "../brink-runtime" }
xliff2 = { path = "../internal/xliff2" }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true

[lints]
workspace = true
