[package]
name = "brink-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compiler for inkle's ink narrative scripting language"

[dependencies]
brink-ir = { path = "../internal/brink-ir" }
brink-format = { path = "../internal/brink-format" }
brink-json = { path = "../internal/brink-json" }
brink-codegen-json = { path = "../internal/brink-codegen-json" }
brink-codegen-inkb = { path = "../internal/brink-codegen-inkb" }
brink-analyzer = { path = "../internal/brink-analyzer" }
brink-syntax = { path = "../internal/brink-syntax" }
brink-db = { path = "../internal/brink-db" }
rowan.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
