[package]
name = "brink-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compiler for inkle's ink narrative scripting language"

[dependencies]
brink-ir = { path = "../internal/brink-ir" }
brink-format = { path = "../internal/brink-format" }
brink-json = { path = "../internal/brink-json" }
brink-codegen-json = { path = "../internal/brink-codegen-json" }
brink-codegen-inkb = { path = "../internal/brink-codegen-inkb" }
brink-driver = { path = "../internal/brink-driver" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
brink-analyzer = { path = "../internal/brink-analyzer" }
brink-runtime = { path = "../brink-runtime" }
brink-syntax = { path = "../internal/brink-syntax" }
brink-format = { path = "../internal/brink-format", features = ["inkt"] }
brink-test-harness = { path = "../internal/brink-test-harness" }
serde_json.workspace = true

[lints]
workspace = true
