[package]
name = "brink-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language server for inkle's ink narrative scripting language"

[dependencies]
brink-ir = { path = "../internal/brink-ir" }
rowan.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
