[package]
name = "brink-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language server for inkle's ink narrative scripting language"

[dependencies]
brink-analyzer = { path = "../internal/brink-analyzer" }
brink-db = { path = "../internal/brink-db" }
brink-driver = { path = "../internal/brink-driver" }
brink-fmt = { path = "../internal/brink-fmt" }
brink-ide = { path = "../internal/brink-ide" }
brink-ir = { path = "../internal/brink-ir" }
brink-syntax = { path = "../internal/brink-syntax" }
rowan.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
