[package]
name = "brink-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime/VM for executing compiled ink stories"

[lints]
workspace = true
