[package]
name = "brink-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime/VM for executing compiled ink stories"

[dependencies]
brink-format = { path = "../internal/brink-format" }
thiserror.workspace = true

[dev-dependencies]
brink-converter = { path = "../internal/brink-converter" }
brink-json = { path = "../internal/brink-json" }
serde_json.workspace = true

[lints]
workspace = true
