[package]
name = "gen-input"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
brink-runtime = { path = "../../../crates/brink-runtime" }
brink-converter = { path = "../../../crates/internal/brink-converter" }
brink-json = { path = "../../../crates/internal/brink-json" }
serde_json = "1"
rand = "0.9"
