[package]
name = "brink-codegen-json"
description = "JSON codegen backend: LIR → ink.json format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
brink-ir = { path = "../brink-ir" }
brink-format = { path = "../brink-format" }
brink-json = { path = "../brink-json" }

[lints]
workspace = true
