[package]
name = "brink-converter"
description = "Converts inklecate .ink.json to brink .inkb format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
brink-format = { path = "../brink-format" }
brink-json = { path = "../brink-json" }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
