[package]
name = "brink-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Incremental project database for inkle's ink narrative scripting language"
publish = false

[dependencies]
brink-syntax = { path = "../brink-syntax" }
brink-ir = { path = "../brink-ir" }
brink-analyzer = { path = "../brink-analyzer" }
rowan.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
