[package]
name = "brink-fmt"
description = "Source code formatter for inkle's ink narrative scripting language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
brink-ir = { path = "../brink-ir" }
brink-syntax = { path = "../brink-syntax" }
rowan.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
