[package]
name = "brink-format"
description = "Binary interface between brink compiler and runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
inkt = ["dep:pest", "dep:pest_derive"]

[dependencies]
bitflags = { workspace = true }
pest = { workspace = true, optional = true }
pest_derive = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
brink-converter = { path = "../brink-converter" }
brink-json = { path = "../brink-json" }
insta = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
