[package]
name = "brink-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HIR types and per-file lowering for inkle's ink narrative scripting language"
publish = false

[dependencies]
brink-syntax = { path = "../brink-syntax" }
rowan.workspace = true
bitflags.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
