[package]
name = "brink-intl"
description = "Internationalization tooling for brink stories"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
brink-format = { path = "../brink-format" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
xliff2 = { path = "../xliff2" }

[dev-dependencies]
brink-converter = { path = "../brink-converter" }
brink-json = { path = "../brink-json" }
brink-runtime = { path = "../../brink-runtime" }
insta = { workspace = true, features = ["json"] }
serde_json = { workspace = true }

[lints]
workspace = true
