[package]
name = "brink-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Intermediate representations for inkle's ink narrative scripting language"
publish = false

[dependencies]
brink-syntax = { path = "../brink-syntax" }
brink-format = { path = "../brink-format" }
rowan.workspace = true
bitflags.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
