[package]
name = "brink-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Syntax types and parser for inkle's ink narrative scripting language"
publish = false

[dependencies]
rowan.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
