[package]
name = "brink-test-harness"
description = "Episode-based behavioral testing for brink ink runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
brink-runtime = { path = "../../brink-runtime" }
brink-format = { path = "../brink-format", features = ["inkt"] }
brink-converter = { path = "../brink-converter" }
brink-json = { path = "../brink-json" }
brink-compiler = { path = "../../brink-compiler" }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "gen-episodes"
path = "src/bin/gen_episodes.rs"

[lints]
workspace = true
