[package]
name = "brink-test-harness"
description = "Episode-based behavioral testing for brink ink runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
brink-runtime = { path = "../../brink-runtime", features = ["testing"] }
brink-format = { path = "../brink-format", features = ["inkt"] }
brink-converter = { path = "../brink-converter" }
brink-json = { path = "../brink-json" }
brink-compiler = { path = "../../brink-compiler" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
brink-syntax = { path = "../brink-syntax" }
brink-ir = { path = "../brink-ir" }
brink-analyzer = { path = "../brink-analyzer" }
brink-codegen-inkb = { path = "../brink-codegen-inkb" }

[lints]
workspace = true
